feat: patchEvent
